--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,14 +1,18 @@
 <p id="notice"><%= notice %></p>
 
-<h1>git練習用に書き換えてます一覧</h1>
+
+<%= link_to '個人情報編集', edit_user_registration_path(current_user.id) %>
+
+<h1>投稿一覧</h1>
 
 <table>
   <thead>
     <tr>
       <th>画像</th>
-      <th>Title</th>
-      <th>Body</th>
-      <th colspan="3"></th>
+      <th>タイトル</th>
+      <th>内容</th>
+      <th>興味・関心</th>
+      <th>投稿者</th>
     </tr>
   </thead>
 
@@ -20,9 +24,14 @@
         <% else %>
           <td>画像がありません</td>
         <% end %>
-        <td><%= link_to post.title, post_path(post) %></td>
-        <td><%= post.body %></td>
+        <td><%= link_to post.title, post_path(post) .truncate(15) %></td>
+        <td><%= post.body .truncate(15) %></td>
         <td><%= render 'posts/tag_list', tag_list: post.interest_list %></td>
+        <% if post.user.nil? %>
+          <td>no user</td>
+        <% else %>
+          <td><%= link_to post.user.nickname, user_path(post.user) %></td>
+        <% end %>
       </tr>
     <% end %>
   </tbody>
@@ -32,4 +41,4 @@
 
 <br>
 
-<%= link_to 'New Post', new_post_path %>
+<%= link_to '新しい投稿をする！', new_post_path %>
