--- a/app/views/users/passwords/new.html.erb
+++ b/app/views/users/passwords/new.html.erb
@@ -1,16 +1,55 @@
-<h2>Forgot your password?</h2>
+<style>
+  .form {
+    width: 600px;
+    margin: 0 auto;
+  }
+  .form h1 {
+    text-align: center;
+    font-weight: normal;
+  }
+  .form .button {
+    margin: 20px auto 0;
+    display: block;
+    width: 200px;
+    background-color: #8888bb;
+    line-height: 44px;
+    text-align: center;
+    font-size: 22px;
+    border-radius: 6px;
+    appearance: none;
+    border: none;
+    color: #fff;
+  }
+  .form input[type="text"],
+  .form input[type="email"],
+  .form input[type="password"] {
+    width: 100%;
+    border-radius: 4px;
+    line-height: 32px;
+    border: 1px solid #ccc;
+    padding: 0 15px;
+  }
+</style>
+<div class="form">
+
+
+
+<h1>パスワードを忘れましたか？</h1>
 
 <%= form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :post }) do |f| %>
   <%= devise_error_messages! %>
 
-  <div class="field">
-    <%= f.label :email %><br />
+  <div>
+  	<p>登録したメールアドレス</p>
     <%= f.email_field :email, autofocus: true %>
   </div>
+  <br>
 
-  <div class="actions">
-    <%= f.submit "Send me reset password instructions" %>
+  <div>
+    <%= f.submit "新しいパスワードを設定する" %>
   </div>
+
+  <br>
 <% end %>
 
 <%= render "users/shared/links" %>
