--- a/app/views/users/registrations/edit.html.erb
+++ b/app/views/users/registrations/edit.html.erb
@@ -1,10 +1,87 @@
-<h2>Edit <%= resource_name.to_s.humanize %></h2>
+<!--最低限のUIレベル -->
+<style>
+  .form {
+    width: 600px;
+    margin: 0 auto;
+  }
+  .form h1 {
+    text-align: center;
+    font-weight: normal;
+  }
+  .form .button {
+    margin: 20px auto 0;
+    display: block;
+    width: 200px;
+    background-color: #8888bb;
+    line-height: 44px;
+    text-align: center;
+    font-size: 22px;
+    border-radius: 6px;
+    appearance: none;
+    border: none;
+    color: #fff;
+  }
+  .form input[type="text"],
+  .form input[type="email"],
+  .form input[type="password"] {
+    width: 100%;
+    border-radius: 4px;
+    line-height: 32px;
+    border: 1px solid #ccc;
+    padding: 0 15px;
+  }
+</style>
+<!-- <!-- <!-- <!-- <div class="form">
+  <h1>新規会員登録</h1>
+  <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
+    <div>
+      <!-- 
+        これを追加してあれば、既存のものでもok
+      <div class="field">
+        <%= f.label :nickname %><br />
+        <%= f.text_field :nickname %>
+      </div>
+     
+
+      <p>ニックネーム</p>
+      <%= f.text_field :nickname, placeholder: "" %>
+    </div>
+    <div>
+      <p>メールアドレス</p>
+      <%= f.email_field :email, placeholder: "例) tanaka.tarou@email.com" %>
+    </div>
+    <div>
+      <p>パスワード</p>
+      <%= f.password_field :password, placeholder: '8文字以上、半角英数字で入力してください' %>
+    </div>
+    <div>
+      <p>パスワード(再確認)</p>
+      <%= f.password_field :password_confirmation, placeholder: '8文字以上、半角英数字で入力してください' %>
+    </div>
+    <%= f.submit "これで登録！", class: "button" %>
+  <% end %>
+</div>
+　　　
+<!--ここからしたが元の記述-->
+
+<div class="form">
+<h2><%= resource_name.to_s.humanize %>編集</h2>
 
 <%= form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f| %>
   <%= devise_error_messages! %>
 
-  <div class="field">
-    <%= f.label :email %><br />
+
+ 　<div>
+      <p>プロフィール画像</p>
+      <%= f.file_field :image %>
+  </div>
+
+　<div>
+    <p>ニックネーム</p>
+    <%= f.text_field :nickname %>
+　</div>
+  <div>
+    <P>Eメール</P>
     <%= f.email_field :email, autofocus: true %>
   </div>
 
@@ -12,32 +89,49 @@
     <div>Currently waiting confirmation for: <%= resource.unconfirmed_email %></div>
   <% end %>
 
-  <div class="field">
-    <%= f.label :password %> <i>(leave blank if you don't want to change it)</i><br />
-    <%= f.password_field :password, autocomplete: "off" %>
+  <div>
+    <p>新しいパスワード</p>
+    <%= f.password_field :password, autocomplete: "off", placeholder: "8文字以上、半角英数字で入力してください" %>
     <% if @minimum_password_length %>
-      <br />
-      <em><%= @minimum_password_length %> characters minimum</em>
+      <br>
     <% end %>
   </div>
 
-  <div class="field">
-    <%= f.label :password_confirmation %><br />
-    <%= f.password_field :password_confirmation, autocomplete: "off" %>
+  <div>
+    <p>新しいパスワードの確認</p>
+    <%= f.password_field :password_confirmation, autocomplete: "off",placeholder: "8文字以上、半角英数字で入力してください" %>
   </div>
 
-  <div class="field">
-    <%= f.label :current_password %> <i>(we need your current password to confirm your changes)</i><br />
-    <%= f.password_field :current_password, autocomplete: "off" %>
+  <div>
+    <p>（必須）現在のパスワード</p>
+    <%= f.password_field :current_password, autocomplete: "off",placeholder: "8文字以上、半角英数字で入力してください" %>
   </div>
 
-  <div class="actions">
-    <%= f.submit "Update" %>
+  <div>
+    <p>所属</p>
+    <%= f.text_field :position, autofocus: true %>
+  </div>
+
+  <div>
+    <p>自己紹介</p>
+    <%= f.text_area :s_introduction, autofocus: true, size: "100x10" %>
+  </div>
+
+
+
+
+
+
+
+  <div>
+    <%= f.submit "更新する", class: "button" %>
   </div>
 <% end %>
 
-<h3>Cancel my account</h3>
 
-<p>Unhappy? <%= button_to "Cancel my account", registration_path(resource_name), data: { confirm: "Are you sure?" }, method: :delete %></p>
+<h3>アカウントの削除</h3>
 
-<%= link_to "Back", :back %>
+<p><%= button_to "アカウントを削除する", registration_path(resource_name), data: { confirm: "本当にアカウント削除していいですか?" }, method: :delete %></p>
+
+<%= link_to "戻る", :back %>
+</div>
