--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Task42</title>
+    <title>Task5test2</title>
     <%= csrf_meta_tags %>
 
     <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
@@ -9,15 +9,20 @@
   </head>
 
   <body>
-  	<% if user_signed_in? %>
-      <%= current_user.nickname %>　としてログインしています。
-      <%= link_to "ログアウト", destroy_user_session_path, method: :delete %>
-    <% else %>
-      <%= link_to "新規登録", new_user_registration_path %> |
-      <%= link_to "ログイン", new_user_session_path %>
-    <% end %>
-
-
+    <header>
+      <nav>
+              
+          	<% if user_signed_in? %>
+              <%= current_user.nickname %>　としてログインしています。
+              <%= link_to "ログアウト", destroy_user_session_path, method: :delete %>
+              <%= link_to "マイページ", user_path(current_user) %>
+            <% else %>
+              <%= link_to "新規登録", new_user_registration_path %> |
+              <%= link_to "ログイン", new_user_session_path %>
+            <% end %>
+            <%= link_to 'トップ', products_path %>
+      </nav>
+    </header>
 
     <%= yield %>
   </body>
